grid reorganize: fix alignment of the global checkbox to work correctly on all browsers including IE. Fixes LP #785200, LP #785204

--- a/karl/views/static/jquery-ui/ui.custom.css
+++ b/karl/views/static/jquery-ui/ui.custom.css
@@ -245,20 +245,20 @@
 
 /* move/delete buttons in the grid footer */
 
-.ui-grid-footer .ui-button {
+#filegrid .ui-grid-footer .ui-button {
     margin-top: 4px;
     margin-left: 2px;
     margin-right: 2px;
 }
-.ui-grid-footer .ui-button .ui-button-text {
+#filegrid .ui-grid-footer .ui-button .ui-button-text {
     line-height: 9px;
 }
-.ui-grid-footer .ui-widget.ui-button .ui-button-text {
+#filegrid .ui-grid-footer .ui-widget.ui-button .ui-button-text {
     /* reset back the font size to what we set in the grid */
     font-size: 1em;
 }
 
-.ui-grid-footer-button-positioner {
+#filegrid .ui-grid-footer-button-positioner {
     float: left;
     /*
     margin-left: 4px;
@@ -268,11 +268,11 @@
 
 /* make sure Move To menu stands on top */
 
-.ui-grid-footer-button-positioner .ui-menu {
+#filegrid .ui-grid-footer-button-positioner .ui-menu {
     z-index: 99999;
 }
 /* non-selectable items (span) should stand just like the (a) */
-.ui-grid-footer-button-positioner .ui-menu span {
+#filegrid .ui-grid-footer-button-positioner .ui-menu span {
     padding: 0.2em 0.4em;
     font-weight: normal;
     color: #b0b0b0;
@@ -281,8 +281,8 @@
 
 /* global selector in the grid column header */
 
-input.ui-grid-globalselector {
-    margin-left: 9px;
+div.ui-grid-globalselector {
+    padding: 2px 5px 3px;
 }
 
 /* autobox2 customization */
